--- a/test.yaml
+++ b/test.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: other2
-  namespace: german-env1
+  name: ${ parameters["app"] }
+  namespace: ${ parameters["app"] }
 spec:
   selector:
     matchLabels:
       app: nginx
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
