--- a/test.yaml
+++ b/test.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.0
+        image: nginx
         ports:
         - containerPort: 80
         volumeMounts:
