--- a/nginx-index-html-configmap.yaml
+++ b/nginx-index-html-configmap.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
+data:
+  index.html: <html><h4>hola</h4></html>
 kind: ConfigMap
 metadata:
+  creationTimestamp: null
   name: nginx-index-html-configmap
-data:
-<html><h4>Hola</h4></html>
