--- a/nginx-index-html-configmap.yaml
+++ b/nginx-index-html-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  index.html: <html><h4>hola</h4></html>
+  <html><h4>hola</h4></html>
 kind: ConfigMap
 metadata:
   creationTimestamp: null
